# veryslip

./: .gitignore  INSTALL.md  README.md  REPOSITORY_STRUCTURE.md  veryslip-server-deploy.sh
veryslip-client/: .gitignore  CONFIGURATION.md  Cargo.toml  DOH_INTEGRATION.md  FINAL_STATUS.md  PRODUCTION_READY.md  README.md  TROUBLESHOOTING.md  blocklist.txt  config-doh-example.toml
veryslip-client/benches/: base32_bench.rs  cache_bench.rs  compression_bench.rs
veryslip-client/src/: doh.rs  error.rs  lib.rs  logging.rs  main.rs  pipeline.rs  recovery.rs  reload.rs  stealth.rs
veryslip-client/src/buffer/: iouring.rs  mod.rs  tokio_backend.rs
veryslip-client/src/compression/: mod.rs
veryslip-client/src/config/: mod.rs
veryslip-client/src/connection/: mod.rs
veryslip-client/src/dns/: base32.rs  mod.rs  packet.rs
veryslip-client/src/filter/: mod.rs
veryslip-client/src/load_balancer/: mod.rs
veryslip-client/src/metrics/: mod.rs
veryslip-client/src/mtu/: mod.rs
veryslip-client/src/prefetch/: mod.rs
veryslip-client/src/priority/: mod.rs
veryslip-client/src/proxy/: mod.rs
veryslip-client/src/query/: mod.rs
veryslip-client/src/quic/: mod.rs
veryslip-client/tests/: integration_test.rs
veryslip-server/: BATCH_PROCESSING_INTEGRATION.md  COMPRESSION_INTEGRATION_PLAN.md  Cargo.toml  DEPLOYMENT_GUIDE.md  EXISTING_FEATURES_VERIFIED.md  IMPLEMENTATION_STATUS.md  METRICS_IMPLEMENTATION.md  README.md  SECURITY.md  test_compression.rs
veryslip-server/crates/slipstream-server/: Cargo.toml
veryslip-server/crates/slipstream-server/src/: batch.rs  compression.rs  main.rs  metrics.rs  metrics_server.rs  server.rs  udp_fallback.rs
veryslip-server/crates/slipstream-server/src/udp_fallback/: decode.rs
