[package]
name = "veryslip-client"
version = "0.1.0"
edition = "2021"
authors = ["Very Slip Contributors"]
description = "High-performance DNS tunnel client with compression, caching, and load balancing"
license = "MIT"
repository = "https://github.com/yourusername/veryslip"

[features]
default = ["metrics", "prefetch", "filter"]
# Enable io_uring for Linux (requires kernel 5.1+)
io-uring = ["dep:io-uring"]
# Enable metrics collection and HTTP endpoint
metrics = []
# Enable DNS-over-HTTPS support
doh = []
# Enable HTML prefetching
prefetch = []
# Enable ad blocking filter
filter = []
# Enable SIMD optimizations (AVX2 on x86_64)
simd = []

[dependencies]
# async / runtime
tokio = { version = "1.49", features = ["full"] }
futures = "0.3"

# networking / transport
quinn = "0.11"
hyper = { version = "0.14", features = ["full"] }
http = "0.2"
url = "2.5"
trust-dns-proto = "0.23"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }

# tls / crypto / compression
rustls = { version = "0.21", features = ["dangerous_configuration"] }
zstd = "0.13"
rand = "0.8"
base64 = "0.22"
httpdate = "1.0"
webpki-roots = "0.25"

# metrics
prometheus = "0.13"

# data structures / sync
dashmap = "5.5"
parking_lot = "0.12"
lru = "0.12"
bytes = "1.6"
once_cell = "1.19"
socket2 = "0.5"

# database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }

# serialization / parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# html parsing
html5ever = "0.27"
markup5ever_rcdom = "0.3"

# logging / errors / cli
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
notify = "6.1"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
# io_uring support for Linux
io-uring = { version = "0.6", optional = true }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release.build-override]
opt-level = 3

# Optimize dependencies in dev builds for faster compilation
[profile.dev.package."*"]
opt-level = 2

[[bench]]
name = "base32_bench"
harness = false

[[bench]]
name = "compression_bench"
harness = false

[[bench]]
name = "cache_bench"
harness = false